debugging reset part 3

--- a/src/views/gameplay.html
+++ b/src/views/gameplay.html
@@ -162,7 +162,7 @@
             $('#player3tracking-text').text('Tracking');
           } else {
             $('#player3tracking').css('background',disabledColor);
-            $('#player1tracking-text').text('Reconnect');
+            $('#player3tracking-text').text('Reconnect');
           }
         }
         if(dataarr[0] == 'player4') {
@@ -600,7 +600,7 @@
     <!-- NOTE TO SELF: ADD A PROMPT -->
     <div class="mdl-grid mdl-center reset-button">
       <div class="mdl-cell mdl-cell--12-col mdl-center">
-        <button id="reset" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--reset scenebutton">
+        <button id="reset" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-button--reset scenebutton">
           Reset
         </button>
       </div>
