--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,7 +81,7 @@
 }
 
 .mdl-button--reset {
-  background-color: rgb(255,82,82);
+  background-color: rgb(255,82,82)!important;
   color: #fff;
 }
 
