--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -148,6 +148,8 @@
 
         // toggle ready switch off
         $('.mdl-js-switch')[4].MaterialSwitch.off();
+
+        updatePlayerData();
       }
 
       function readyState() {
@@ -160,6 +162,8 @@
 
         // toggle ready switch on
         $('.mdl-js-switch')[4].MaterialSwitch.on();
+
+        updatePlayerData();
       }
 
       function ingameState() {
@@ -172,6 +176,86 @@
 
         // toggle ready switch off
         $('.mdl-js-switch')[4].MaterialSwitch.off();
+      }
+
+      function updatePlayerData() {
+        $.getJSON( ip + "/config", function( data ) {
+          var playerData = data["PLAYERS"];
+
+          var player1h, player2h, player3h, player4h;
+
+          // get player heights
+          heightmap.forEach(function(item) {
+            if(item.value == playerData[0].height) {
+              player1h = item.key;
+            }
+            if(item.value == playerData[1].height) {
+              player2h = item.key;
+            }
+            if(item.value == playerData[2].height) {
+              player3h = item.key;
+            }
+            if(item.value == playerData[3].height) {
+              player4h = item.key;
+            }            
+          });
+
+          // display player height from JSON file
+          $( '#player1-height' ).text(player1h);
+          $( '#player2-height' ).text(player2h);
+          $( '#player3-height' ).text(player3h);
+          $( '#player4-height' ).text(player4h);
+
+          // display player names from JSON file
+          $( '#player1-name' ).text(playerData[0].name);
+          $( '#player2-name' ).text(playerData[1].name);
+          $( '#player3-name' ).text(playerData[2].name);
+          $( '#player4-name' ).text(playerData[3].name);
+
+          // display player ison from JSON file
+          if(playerData[0].ison == true) {
+            $( '#player1-ison' ).text("ON");
+          } else {
+            $( '#player1-ison' ).text("OFF");
+          }
+          if(playerData[1].ison == true) {
+            $( '#player2-ison' ).text("ON");
+          } else {
+            $( '#player2-ison' ).text("OFF");
+          }
+          if(playerData[2].ison == true) {
+            $( '#player3-ison' ).text("ON");
+          } else {
+            $( '#player3-ison' ).text("OFF");
+          }
+          if(playerData[3].ison == true) {
+            $( '#player4-ison' ).text("ON");
+          } else {
+            $( '#player4-ison' ).text("OFF");
+          }
+
+          // display player gender from JSON file
+          if(playerData[0].gender == 1) {
+            $( '#player1-gender' ).text("Male");        
+          } else {
+            $( '#player1-gender' ).text("Female");
+          }
+          if(playerData[1].gender == 1) {
+            $( '#player2-gender' ).text("Male");        
+          } else {
+            $( '#player2-gender' ).text("Female");
+          }
+          if(playerData[2].gender == 1) {
+            $( '#player3-gender' ).text("Male");        
+          } else {
+            $( '#player3-gender' ).text("Female");
+          }
+          if(playerData[3].gender == 1) {
+            $( '#player4-gender' ).text("Male");        
+          } else {
+            $( '#player4-gender' ).text("Female");
+          }
+        });
       }
 
       function disableFields() {
@@ -244,95 +328,7 @@
         // end warning message dialogue
 
         /* Display server data on page load */
-        $.getJSON( ip + "/config", function( data ) {
-          var playerData = data["PLAYERS"];
-          var player1h, player2h, player3h, player4h;
-
-          // get player heights in feet and inches
-          heightmap.forEach(function(item) {
-            if(item.value == playerData[0].height) {
-              player1h = item.key;
-            }
-            if(item.value == playerData[1].height) {
-              player2h = item.key;
-            }
-            if(item.value == playerData[2].height) {
-              player3h = item.key;
-            }
-            if(item.value == playerData[3].height) {
-              player4h = item.key;
-            }            
-          });
-
-          // display player heights from JSON file
-          $( '#player1-height' ).append(player1h);
-          $( '#player2-height' ).append(player2h);
-          $( '#player3-height' ).append(player3h);
-          $( '#player4-height' ).append(player4h);
-
-          // display player names from JSON file
-          $( '#player1-name' ).append(playerData[0].name);
-          $( '#player2-name' ).append(playerData[1].name);
-          $( '#player3-name' ).append(playerData[2].name);
-          $( '#player4-name' ).append(playerData[3].name);
-
-          // diplay player ison from JSON file
-          if(playerData[0].ison == true) {
-            $( '#player1-ison' ).append("ON");
-          } else {
-            $( '#player1-ison' ).append("OFF");
-          }
-          if(playerData[1].ison == true) {
-            $( '#player2-ison' ).append("ON");
-          } else {
-            $( '#player2-ison' ).append("OFF");
-          }
-          if(playerData[2].ison == true) {
-            $( '#player3-ison' ).append("ON");
-          } else {
-            $( '#player3-ison' ).append("OFF");
-          }
-          if(playerData[3].ison == true) {
-            $( '#player4-ison' ).append("ON");
-          } else {
-            $( '#player4-ison' ).append("OFF");
-          }
-
-          // display player gender from JSON file
-          if(playerData[0].gender == 1) {
-            $( '#player1-gender' ).append("Male");        
-          } else {
-            $( '#player1-gender' ).append("Female");
-          }
-          if(playerData[1].gender == 1) {
-            $( '#player2-gender' ).append("Male");        
-          } else {
-            $( '#player2-gender' ).append("Female");
-          }
-          if(playerData[2].gender == 1) {
-            $( '#player3-gender' ).append("Male");        
-          } else {
-            $( '#player3-gender' ).append("Female");
-          }
-          if(playerData[3].gender == 1) {
-            $( '#player4-gender' ).append("Male");        
-          } else {
-            $( '#player4-gender' ).append("Female");
-          }
-              
-          /* Reflect stored JSON values to form */
-          // ison
-          if(playerData[0].ison == true) $('.mdl-js-switch')[0].MaterialSwitch.on();
-          if(playerData[1].ison == true) $('.mdl-js-switch')[1].MaterialSwitch.on();
-          if(playerData[2].ison == true) $('.mdl-js-switch')[2].MaterialSwitch.on();
-          if(playerData[3].ison == true) $('.mdl-js-switch')[3].MaterialSwitch.on();
-
-          // gender
-          if(playerData[0].gender == 2) $('.mdl-js-radio')[1].MaterialRadio.check();
-          if(playerData[1].gender == 2) $('.mdl-js-radio')[3].MaterialRadio.check();
-          if(playerData[2].gender == 2) $('.mdl-js-radio')[5].MaterialRadio.check();
-          if(playerData[3].gender == 2) $('.mdl-js-radio')[7].MaterialRadio.check();
-        });
+        updatePlayerData();
 
         /* Player heights */
         heightmap.forEach(function(item) {
